--- a/app/design/frontend/base/default/layout/dailydeal.xml
+++ b/app/design/frontend/base/default/layout/dailydeal.xml
@@ -10,23 +10,27 @@
 -->
 <layout version="0.1.0">
     <default>
-    	<reference name="head">
-            <action method="addItem"><type>skin_css</type><name>css/dailydeal.css</name></action>
+        <reference name="head">
+            <action method="addItem">
+                <type>skin_css</type>
+                <name>css/dailydeal.css</name>
+            </action>
         </reference>
     </default>
     
     <dailydeal_deals_browse>
-      <reference name="root">
-        <action method="setTemplate"><template>page/1column.phtml</template></action>
-        <remove name="left" />
-      </reference>
+        <reference name="root">
+            <action method="setTemplate">
+                <template>page/1column.phtml</template>
+            </action>
+            <remove name="left" />
+        </reference>
+        
         <reference name="content">
             <block type="dailydeal/deals" name="deals" template="dailydeal/browse.phtml">
                 <block type="dailydeal/deal_list" name="deal_list" template="dailydeal/deal/list.phtml">
-                    
                 </block>
             </block>
-
         </reference>
 
 
@@ -34,30 +38,27 @@
             <!--block type="browseby/attribute_navigation" name="browseby.attribute.nav.manufacturer" after="catalog.leftnav" template="browseby/attribute/left.phtml">
                 <action method="setBrowseAttribute"><code>manufacturer</code></action>
             </block-->
-
         </reference>
     </dailydeal_deals_browse>
     
     <dailydeal_index_index>
-      <reference name="root">
-        <action method="setTemplate"><template>page/1column.phtml</template></action>
-        <remove name="left" />
-      </reference>
+        <reference name="root">
+            <action method="setTemplate">
+                <template>page/1column.phtml</template>
+            </action>
+            <remove name="left" />
+        </reference>
         <reference name="content">
             <block type="dailydeal/deals" name="deals" template="dailydeal/browse.phtml">
                 <block type="dailydeal/deal_list" name="deal_list" template="dailydeal/deal/list.phtml">
-                    
                 </block>
             </block>
-
         </reference>
-
 
         <reference name="left">
             <!--block type="browseby/attribute_navigation" name="browseby.attribute.nav.manufacturer" after="catalog.leftnav" template="browseby/attribute/left.phtml">
                 <action method="setBrowseAttribute"><code>manufacturer</code></action>
             </block-->
-
         </reference>
     </dailydeal_index_index>
     
